# cmd/api/users.go
@@ -99,6 +99,37 @@ func (app *application) unfollowUserHandler(w http.ResponseWriter, r *http.Reque
 	w.WriteHeader(http.StatusNoContent)
 }
 
+// ActivateUser godoc
+//
+//	@Summary		Activates/Register a user
+//	@Description	Activates/Register a user by invitation token
+//	@Tags			users
+//	@Produce		json
+//	@Param			token	path		string	true	"Invitation token"
+//	@Success		204		{string}	string	"User activated"
+//	@Failure		404		{object}	error
+//	@Failure		500		{object}	error
+//	@Security		ApiKeyAuth
+//	@Router			/users/activate/{token} [put]
+func (app *application) activateUserHandler(w http.ResponseWriter, r *http.Request) {
+	token := chi.URLParam(r, "token")
+
+	err := app.store.Users.Activate(r.Context(), token)
+	if err != nil {
+		switch err {
+		case store.ErrResourceNotFound:
+			app.writeNotFoudResponse(w, r, err)
+		default:
+			app.writeInternalServerErrorResponse(w, r, err)
+		}
+		return
+	}
+
+	if err := app.writeDataRespose(w, http.StatusNoContent, ""); err != nil {
+		app.writeInternalServerErrorResponse(w, r, err)
+	}
+}
+
 func getUserFromContext(r *http.Request) *store.UserModel {
 	user, _ := r.Context().Value(userCtx).(*store.UserModel)
 	return user
